<resources>
    <string name="app_name">亲情快递</string>
    <string name="notifications_enabled">推送接收开启</string>
    <string name="notifications_enabled_summary">接收推送消息</string>
    <string name="notifications_disabled">推送接收关闭</string>
    <string name="notifications_disabled_summary">不接收推送消息</string>
    <string name="common_login">登录</string>
    <string name="common_regist">注册</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_close">  关闭  </string>
    <string name="common_email">邮箱</string>
    <string name="common_password">密码</string>
    <string name="common_setting">设置</string>
    <string name="common_send">发送</string>
    <string name="common_take">拍照</string>
    <string name="common_image">图片</string>
    <string name="common_exit">再按一次后退键退出应用程序</string>
    <string name="common_next">下一步</string>
    <string name="login_username">邮箱/手机号</string>
    <string name="login_password">密码</string>
    <string name="common_login_error">邮箱/手机号或密码错误！</string>
    <string name="common_upload_error">上传头像失败</string>
    <string name="update_error">更新失败</string>
    <string name="version_error">版本获取失败</string>
    <string name="wait_login">登录中，请稍等</string>
    <string name="wait_regist">注册中，请稍等</string>
    <string name="wait_confirm">确认中，请稍等</string>
    <string name="wait_search">搜索中，请稍等</string>
    <string name="wait_loading">加载中，请稍等</string>
    <string name="wait_send">发送中，请稍等</string>
    <string name="regist_title1">注册帐号</string>
    <string name="regist_title2">此帐号同时也是熙康网帐号</string>
    <string name="regist_pet">昵称(推荐使用真实姓名)</string>
    <string name="regist_phonenum">手机号(可选)</string>
    <string name="regist_null">请输入相关信息</string>
    <string name="regist_phone_err">手机号不能超过11位</string>
    <string name="select_head">选择头像</string>
    <string name="confirm_failed">确认失败</string>
    <string name="loading_failed">加载失败</string>
    <string name="regist_succeed">恭喜您，注册成功</string>
    <string name="regist_failed">注册失败</string>
    <string name="regist_info_1">点击注册则表示你同意接受</string>
    <string name="regist_info_2">熙康网用户条款</string>
    <string name="regist_info_3">		一、服务条款的确认和接纳
		\n沈阳东软医疗系统有限公司及其关联公司（简称“东软熙康”，东软熙康网络平台简称“熙康网”）所提供的服务将完全按照其发布的服务条款和操作规则严格执行。您必须完全同意所有服务条款并完成注册程序，才能成为东软熙康的正式会员。注册前请您仔细阅读以下条款，当您点击按钮开始注册，成为熙康网会员的同时，将默认您对以下列示的条款（以下简称“服务条款”或“本条款”）表示同意。
		\n二、服务简介
		\n您需要：
		\n1．提供详尽、真实和准确的个人资料，并对个人资料进行及时更新。
		\n2．如您所提供的资料包含不正确的信息，东软熙康保留中止为您提供网络服务的权利。您在享有东软熙康提供的各种服务的同时，同意接受东软熙康提供的其他各类信息服务。
		\n3．如您代表一家公司或其他法律主体在熙康网登记，则您应声明和保证，您有权使该公司或其他法律主体受本条款约束。
		\n三、服务条款的修改
		\n东软熙康在必要时将修改服务条款及相关服务内容，届时将在会员界面提示修改内容。如果您不同意所做的修改，可以主动取消业已获得的网络服务。如果您继续使用东软熙康的服务，则被视为接受服务条款的变动。您在享受各项服务时，应当及时查阅、了解修改的内容，并自觉遵守服务条款以及任何单项服务的相关条款。
		\n四、服务修订
		\n1．鉴于网络服务的特殊性，您同意熙康网有权随时变更、中断或终止部分或全部的服务（包括收费网络服务）。如变更、中断或终止的服务属于免费服务，东软熙康无需通知您，也无需对任何会员或任何第三方承担任何责任；如变更、中断或终止的服务属于收费服务，东软熙康应当在变更、中断或终止之前事先通知您，并应向受影响的会员提供等值的替代性的收费服务，如您不愿意接受替代性的收费服务，就您已经向东软熙康支付的服务费，东软熙康应当按照您实际使用相应收费网络服务的情况扣除相应服务费之后将剩余的服务费退还给您。
		\n2．您理解，网站需要定期或不定期地对提供网络服务的平台或相关的设备进行检修或者维护，如因此类情况而造成收费网络服务在合理时间内的中断，网站无需为此承担任何责任，但网站应尽可能事先进行通告。
		\n3．如发生下列任何一种情形，您同意东软熙康有权随时中断或终止向您提供本条款项下的网络服务（包括收费网络服务）而无需对您或任何第三方承担任何责任：
		\n(1) 您提供的个人资料不真实；
		\n(2) 您违反本条款中规定的使用规则；
		\n(3)
		您在使用收费网络服务时未按规定向网站支付相应的服务费；
		\n(4) 熙康网合理认为其他不适当的情形。
		\n五、会员隐私制度
		\n1．您知悉并同意，为便于向您提供更好的服务，东软熙康将在您自愿选择服务或者提供信息的情况下收集您的个人信息，并将这些信息进行整合。东软熙康收集的信息将成为东软熙康常规商业档案的一部分，且有可能因为转让、合并、收购、重组等原因而被转移到东软熙康的继任公司或者指定的一方。东软熙康将善意使用收集的信息，且采取常规措施保证信息安全。
		\n2．尊重会员个人隐私是东软熙康的一项基本政策。东软熙康将对您的资料实行保密，承诺不会在未经您授权时公开、编辑或透露其注册资料及保存在东软熙康中的非公开内容，但您可以授权东软熙康向第三方公开或透露您的相关信息。详细内容参见网站隐私保护条款（附件1），除非东软熙康在诚信的基础上，认为透露这些信息在以下几种情况是必要的：
		\n(1)
		遵守有关法律规定，包括在国家有关机关查询时，提供会员的注册信息、会员在东软熙康的网页中注册的相关内容、发布的信息内容、发布时间、互联网地址或者域名等。
		\n(2) 保护东软熙康的知识产权和其他重要权利。
		\n(3) 在紧急情况下，竭力维护会员个人和社会大众的隐私安全。
		\n(4)
		根据本条款相关规定或者东软熙康认为必要的其他情形下。
		\n六、会员帐号、密码和安全性
		\n您一旦注册成功，成为东软熙康的正式会员，将得到一个密码和会员名。会员名和密码只允许会员使用，不得将密码公开或提供给第三方，您将对会员名和密码安全负有全部责任。如果因您未保管好自己的帐号和密码而对您、东软熙康或第三方造成的损害，您将负全部责任。另外，您要对以您的会员名进行的所有活动和事件负全责。您可随时根据指示改变您的密码，您若发现任何非法使用会员帐号或存在安全漏洞的情况，请立即通告东软熙康。
		\n七、会员管理
		\n您必须单独承担发布信息内容的责任。您对熙康网提供的服务的使用是根据所有适用于该服务的地方法律、国家法律和国际法律标准。
		\n您承诺：
		\n1．在熙康网发布信息或者利用熙康网的服务时必须符合中国有关法规，不得在熙康网或者利用熙康网的服务制作、复制、发布、传播以下信息：
		\n(1) 反对宪法所确定的基本原则的；
		\n(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
		\n(3)
		损害国家荣誉和利益的；
		\n(4) 煽动民族仇恨、民族歧视，破坏民族团结的；
		\n(5) 破坏国家宗教政策，宣扬邪教和封建迷信的；
		\n(6)
		散布谣言，扰乱社会秩序，破坏社会稳定的；
		\n(7) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
		\n(8)
		侮辱或者诽谤他人，侵害他人合法权益的；
		\n(9) 含有法律、行政法规禁止的其他内容的。
		\n2．在熙康网发布信息或者利用其服务时还必须符合其他有关国家和地区的法律规定以及国际法的有关规定。
		\n3．不利用熙康网的服务从事以下活动：
		\n(1) 未经允许，进入计算机信息网络或者使用计算机信息网络资源的；
		\n(2)
		未经允许，对计算机信息网络功能进行删除、修改或者增加的；
		\n(3)
		未经允许，对进入计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加的；
		\n(4)
		故意制作、传播计算机病毒等破坏性程序的；
		\n(5) 其他危害计算机信息网络安全的行为。
		\n4．不以任何方式干扰熙康网的服务。
		\n5．您同意不会：
		\n(1)
		在与任何连锁信件、大量胡乱邮寄的电子邮件、滥发电子邮件或任何复制或多余的信息有关的方面使用东软熙康提供的“服务”；
		\n(2)
		利用东软熙康提供的服务制作虚假的电子邮件地址，或以其它形式试图在发送人的身份或信息来源方面误导其他会员。
		\n6．遵守东软熙康的所有其他规定和程序。
		\n7．您同意，东软熙康向您的电子邮箱发送商务信息，您须对自己发送的电子邮件承担法律责任。
		\n8．您须理解，如果熙康网发现您网站传输的信息明显属于上段第
		(1)条所列内容之一，依据中国法律，东软熙康有义务立即停止传输，保存有关记录，向国家有关机关报告，并且删除含有该内容的地址、目录或关闭服务器。
		\n9．您使用的其他服务，包括企业、商机、产品搜索、供求商机发布、产品陈列室等以交互形式为上网会员提供信息发布条件的行为，也须遵守本条的规定以及熙康网专门发布的服务规则，上段中描述的法律后果和法律责任同样适用于其他服务的会员。
		\n若您的行为不符合以上提到的服务条款，熙康网将做出独立判断立即取消对您的服务。
		\n八、拒绝提供担保
		\n您个人对网络服务的使用承担风险。东软熙康对此不作任何类型的担保，不论是明确的或隐含的，但是不对商业性的隐含担保、特定目的和不违反规定的适当担保作限制。东软熙康不担保服务一定能满足您的要求，也不担保服务不会受中断，对服务的及时性、安全性、出错发生都不作担保。东软熙康对在熙康网上进行的任何商品购物服务或交易进程，不作担保。您不会从东软熙康得到口头或书写的意见或信息，也不会在这里做明确担保。
		\n九、有限责任
		\n东软熙康对任何直接、间接、偶然、特殊及继起的损害不负责任，这些损害可能来自：不正当使用网络服务、在网上购买商品或进行同类型服务、在网上进行交易、非法使用网络服务或会员传送的信息有所变动。
		\n如发生境内外基础电信运营商的移动通信网络的故障、技术缺陷、覆盖范围限制、计算机病毒、黑客攻击、会员所在位置、会员关机、火灾、水灾、暴动、骚乱、战争、自然灾害等不可抗力或其他非东软熙康技术能力范围内的事因等造成的服务中断、会员发送的短信息的内容丢失、出现乱码、错误接收、无法接收、迟延接收而影响东软熙康提供服务，东软熙康无须承担任何责任。
		\n十、对会员信息的存储和限制
		\n东软熙康不对您所发布信息的删除或储存失败负责。东软熙康有判定您的行为是否符合东软熙康服务条款的要求和精神的保留权利，如果您违背了服务条款的规定，则东软熙康有权中断会员服务及相关帐号。
		\n十一、保障
		\n您同意保障和维护熙康网全体会员的利益，负责支付因您使用超出服务范围而产生的律师费用以及违反服务条款的损害补偿费用等。
		\n十二、结束服务
		\n您或熙康网可随时根据实际情况中断一项或多项网络服务，东软熙康无须对个人或第三方负责。您对后来的条款修改有异议，或对东软熙康的服务不满，可以行使如下权利：
		\n(1) 停止使用东软熙康的网络服务。
		\n(2) 通告东软熙康停止对您的服务。
		\n结束会员服务后，您使用网络服务的权利将立即中止。从中止时起，东软熙康不对您承担任何义务和责任。
		\n十三、通告
		\n所有发给您的通告都可通过电子邮件、常规的信件或通过页面公告方式进行传送。东软熙康将通过上述方法之一将消息传递给您，告知您服务条款的修改、服务变更、或其它重要事情。因您的原因导致没有收到相关信息，导致的损失，东软熙康不承担相关责任。同时，东软熙康保留对您投放商业性广告的权利。
		\n十四、网络服务的内容所有权
		\n东软熙康定义的内容包括：文字、软件、声音、相片、录像、图表；广告中的全部内容；电子邮件中的全部内容；东软熙康为您提供的其他信息。所有这些信息均受版权、商标、标签和其他财产所有权法律的保护。您只能在东软熙康和广告商的授权下才能使用这些内容，不能擅自复制、再造或创造与这些内容有关的派生产品。熙康网所有文章的版权归原文作者和/或东软熙康共同或单独所有，任何人如需转载该文章，必须征得原文作者和/或东软熙康共同或单独授权。
		\n十五、移动服务
		\n网站包括向某些移动设备提供发送信息服务和相关功能，您同意，我们可以通过移动设备与您进行电子通信，同时您也可以与我们共享有关这类服务的某些使用信息，如果您更改或取消移动电话号码，则必须立即更新您的账户信息，以确保我们将您的信息发送给其他人。
		\n十六、法律
		\n东软熙康不行使、未能及时行使或者未充分行使本条款或者按照法律规定所享有的权利，不应被视为放弃该权利，也不影响东软熙康在将来行使该权利。
		\n本协议条款适用于中华人民共和国法律。如果任何服务条款与法律相抵触，则这些条款将按法律规定重新解释，而其他条款依旧保持对您产生法律效力和影响。如出现纠纷，您和东软熙康一致同意将纠纷交由东软熙康注册地址所在地的人民法院管辖。本协议的最终解释权归东软熙康所有。
		\n附件一：
		\n网站隐私保护条款
		\n本网站内容由沈阳东软医疗系统有限公司及其关联公司（以下简称“东软熙康”、“东软熙康公司”或“我们”）提供。
		\n在您登录本网站，作为本网站的用户，采用我们为您提供的各项服务时，我们会收集您的个人信息以及个人健康相关资料。尽管如此，我们极其认真地对待您的隐私及个人信息的安全问题。这份文档是对于我们收集和使用您的相关信息的说明，我们希望这将帮助您做出共享信息给我们的决定，以便与我们更好地为您提供健康服务。
		\n我们要收集的信息及一些相关数据
		\n1. 集合信息
		\n和其他商业组织一样，我们通过收集集合信息来监控本网站的使用情况，在此过程中不会收集到可以识别的个人信息。典型的例子是我们收集访问本网站和每一个网页的访问者数量及访问者Internet服务提供商的原始域名。此类信息被用于理解访问者使用网站的用途，并可能提供给东软熙康内部或其他第三方共享。
		\n2. 个人信息
		\n当您为了使用本网站或东软熙康提供的相关健康管理服务时，我们将会收集可以识别您个人身份的相关信息，例如：您的姓名、电话、地址、邮件地址等。您可以选择不填，但这样可能会导致当您需要服务时，我们无法及时联系到您。
		\n同时，为了更好地为您提供健康管理服务，我们可能会获得关于您的敏感个人信息，例如您的身体或精神健康状况，但只在您自愿主动提供信息的情况下，我们才能够得到。我们还可能获得您的一些观点，例如，当您向我们做出反馈或提出问题的时候。有时，我们可能会从其他地方获得您的个人信息，并会将其添加到我们已掌握的关于您的个人信息中，以帮助我们为您提供更加个性化的服务。
		\n我们如何使用这些信息
		\n1. 我们仅在符合本隐私保护条款和已经提供给您的任何数据保护须知的情况下才使用您的信息。但下列情况下除外：
		\n(1) 事先获得用户的明确授权；
		\n(2) 根据有关的法律法规要求；
		\n(3) 按照相关政府主管部门的要求；
		\n(4)
		为维护社会公众的利益；
		\n(5) 为维护本网站的合法权益。
		\n2.
		本网站可能会与第三方合作向用户提供相关的服务，在此情况下，如该第三方同意承担与本网站同等的保护用户隐私的责任，则本网站可将用户的注册资料等提供给该第三方；
		\n3. 在不透露单个用户隐私资料的前提下，本网站有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。
		\n我们如何保护您的信息
		\n为了保护您个人信息的机密性，我们将您的个人信息储存在一台设定了密码并有防火墙保护的服务器上，同时采取了安全技术以及程序来确保您个人信息的安全。
		\n为了确保健康管理服务的专业性，只有为您提供健康服务的专家才能查看到您的个人信息，同时我们与这些专家均签署了会员隐私保护协议，确保您的信息不会外泄。
		\n您的个人健康信息及帐号等敏感信息在传输过程中受到加密保护。
		\nCookies的使用
		\nCookies是发送到您的网络浏览器并储存到您的计算机硬盘上的小文件，有时会在您第一次在网站上注册时生成并转移到您的硬盘上。它们以后会被用来识别您的计算机并允许您无须每次登陆即可重复访问网站。Cookies仅仅被用来加快您访问本网站和所需信息的速度。大部分网络浏览器都接受Cookies，您通常也可改变浏览器的设置来阻止Cookies的转移。但是须提请您注意的是，如果您这样更改了设置，有可能丧失一些功能的使用。
		\n不当行为
		\n我们可能根据国家相关安全规定来使用收集到的和/或接收到的关于您的信息来调查和帮助阻止不法行为或者那些威胁我们的网络或危及本网站规定的行为。
		\n访问和更正
		\n您有权随时登录熙康网（http://www.xikang.com），查看或修改您的个人信息。
		\n放弃与我们的进一步联系
		\n我们可能会随时通过电子邮件或短信与您联系，告知您关于我们产品、服务或者东软熙康相关信息，这些信息可能会对您有所帮助。如果您不希望收到此类信息，您可以通过致电东软熙康客服中心4001639399方便地选择不再接受我们的信息。您应在所有联系方式上清楚地注明您的姓名、用户名、注册信息（如果有）和本网站名称。
		\n其他站点的链接
		\n本网站可能包含与其他站点的链接，本网站不对其他站点的隐私条约或内容负责。
		\n法律性公开
		\n您已理解，根据法律强制性规定，本网站可能需要公开您的个人信息而无须获得您的预先同意并对此不负任何责任。
		\n本隐私保护条款的修改
		\n本隐私保护条款的修改、更新及解释权属于本网站。本网站会随时更新本条款并予以公布，更新的内容自公布之日起生效，请您定期访问，以便及时了解。
		\n免责
		\n本网站保证不对外公开或提供用户注册资料及用户在使用网络服务时存储在本网站的非公开内容，但发生下列情况时，本网站亦毋需承担任何责任：
		\n1. 由于您将用户密码告知他人或与他人共享注册帐户，由此导致的任何个人资料泄露。
		\n2.
		任何由于用户自身计算机问题、黑客政击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营之不可抗力而造成的个人资料泄露、丢失、被盗用或被窜改等。
		\n3.
		由于与本网站链接的其它网站所造成之个人资料泄露及由此而导致的任何法律争议和后果。我们建议用户在离开本网站时，留意阅读收集个人识别信息的每个网站上的隐私权声明。本隐私权声明仅适用于本网站上收集的信息。
		\n附件二：
		\n个人及团体客户
		\n接受沈阳东软医疗系统有限公司
		\n提供健康管理服务的条款
		\n个人及团体客户应当同意本条款全部内容，方可按系统提示完成全部注册程序。个人及团体客户在执行注册程序的过程中，根据声音、文字或图形提示完成表示“同意”的操作，即表示本人完全接受本条款项下全部内容。
		\n根据中国现行有效法律、法规之规定，沈阳东软医疗系统有限公司及其关联公司（简称“东软熙康”，东软熙康网络平台简称“熙康网”）为熙康网注册用户提供的健康管理服务和远程监护功能只限于提供健康管理信息服务且不能代替医学检查、医疗诊断和治疗。为充分保护个人以及团体客户对于东软熙康提供服务的知情权，东软熙康就其提供的健康管理信息服务制订以下服务条款。
		\n熙康网健康评估系统是对注册用户健康现状与未来健康发展趋势的一种评测。通过评测，您将更好地了解您的健康状况，提示您有效地控制、减轻或避免疾病危险因素对您健康的危害，但该评估系统只能提供趋势性的分析结果，并不作为一种诊断工具。该系统所提供的健康评估报告可以作为医师的参考资料，但不是医疗诊断报告。
		\n熙康网健康评估系统提供的健康评估报告所有结果均根据您业已提供的健康信息出具，如您觉得该报告与实际情况不符，请您核查您提供的健康信息。如因信息提供错误导致健康报告以及后续健康管理的失真及失误，东软熙康不承担责任。
		\n如熙康网注册用户需要寻求医学诊疗以及服用药物，必须通过医疗机构的医师进行。凡仅依照熙康网健康评估系统提供的健康评估报告而自行诊治造成的任何不良后果，均由注册用户自负责任。
		\n东软熙康提供健康管理服务时间限于08：30-17：30
		\n（周一到周五，法定节假日除外），服务响应时间12—24小时（周六、周日、法定节假日除外）。
		\n沈阳东软医疗系统有限公司
		\n2011年6月24日起生效</string>
    <string name="modeselect_info_0">欢迎使用亲情快递</string>
    <string name="modeselect_info_1">亲情快递是建立在家人关系基础上的应用，\n请先添加您的家人。</string>
    <string name="modeselect_info_2">帮他注册帐号</string>
    <string name="modeselect_info_3">家人没有帐号帮他注册一个!</string>
    <string name="modeselect_info_4">邀请家人</string>
    <string name="modeselect_info_5">知道家人帐号不知道密码!</string>
    <string name="modeselect_info_6">直接添加家人</string>
    <string name="modeselect_info_7">知道家人帐号与密码!</string>
    <string name="modeselect_info_8">跳过</string>
    <string name="guide_info_1">您未添加任何家人。</string>
    <string name="guide_info_2">系统默认推荐给您“快递小助手”与您一起体验亲情快递。</string>
    <string name="guide_info_3">马上开始</string>
    <string name="guide_info_4">返回添加家人</string>
    <string name="add_title">添加家人</string>
    <string name="del_family_member_title">删除家人</string>
    <string name="del_family_member_info">确定要删除家人”@member“？</string>
    <string name="del_family_member_error">删除家人失败</string>
    <string name="del_family_member_success">删除家人成功</string>
    <string name="del_family_record_title">删除该会话</string>
    <string name="del_family_record_info">确定要删除与家人”@member“之间的会话？</string>
    <string name="del_family_record_error">删除会话失败</string>
    <string name="tab_record">快递</string>
    <string name="tab_family">家人</string>
    <string name="tab_setting">设置</string>
    <string name="setting_info_1">保存信息天数设置</string>
    <string name="setting_info_2">关于亲情快递</string>
    <string name="setting_quit">退出登录</string>
    <string name="setting_version">检查新版本</string>
    <string name="setting_version_info_1">东软熙康健康科技有限公司 版权所有</string>
    <string name="setting_version_info_2">Copyright 2008\-2011 All Rights Reserved</string>
    <string name="setting_hold_month">30天</string>
    <string name="setting_hold_halfyear">半年</string>
    <string name="setting_hold_oneyear">一年</string>
    <string name="setting_hold_always">一直保存</string>
    <string name="remind_info">提醒：SD卡剩余空间不足10M,为了能更好保存亲情快递的信息，请清理SD卡资源。</string>
    <string name="remind_check_note">知道了，不再提醒</string>
</resources>