<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:background="@drawable/bg"
	android:paddingTop="40dp" android:paddingLeft="25dp"
	android:paddingRight="10dp" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="wrap_content" style="@style/title_text"
		android:textColor="#000000" android:layout_height="wrap_content"
		android:text="@string/modeselect_info_0" />
	<TextView android:layout_width="wrap_content"
		android:layout_marginTop="10dp" android:layout_height="wrap_content"
		android:text="@string/modeselect_info_1" />
	<TextView android:layout_width="wrap_content" style="@style/modeselect_mode"
		android:id="@+id/btn_mode_1" android:layout_marginTop="5dp"
		android:paddingLeft="7dp" android:paddingTop="25dp"
		android:background="@drawable/mode_reg_selector"
		android:layout_height="wrap_content" android:text="@string/modeselect_info_2" />
	<TextView android:layout_width="wrap_content" style="@style/modeselect_info"
		android:layout_height="wrap_content" android:text="@string/modeselect_info_3" />

	<TextView android:layout_width="wrap_content" style="@style/modeselect_mode"
		android:paddingTop="15dp" android:id="@+id/btn_mode_2"
		android:paddingLeft="10dp" android:background="@drawable/mode_user_selector"
		android:layout_height="wrap_content" android:text="@string/modeselect_info_4" />
	<TextView android:layout_width="wrap_content" style="@style/modeselect_info"
		android:layout_height="wrap_content" android:text="@string/modeselect_info_5" />

	<TextView android:layout_width="wrap_content" style="@style/modeselect_mode"
		android:paddingTop="25dp" android:id="@+id/btn_mode_3"
		android:paddingLeft="7dp" android:background="@drawable/mode_userandpwd_selector"
		android:layout_height="wrap_content" android:text="@string/modeselect_info_6" />
	<TextView android:layout_width="wrap_content" style="@style/modeselect_info"
		android:layout_height="wrap_content" android:text="@string/modeselect_info_7" />

	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<RelativeLayout android:id="@+id/btn_jump"
			android:layout_alignParentRight="true" android:layout_marginRight="20dp"
			android:layout_alignParentBottom="true" android:layout_marginBottom="10dp"
			android:layout_height="wrap_content" android:layout_centerVertical="true"
			android:layout_width="wrap_content" android:background="@drawable/btn_mode_jump_selector"
			android:gravity="center_horizontal">
			<TextView android:id="@+id/tv_right" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:text="@string/modeselect_info_8" style="@style/main_text" />
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:src="@drawable/arrow" android:layout_toRightOf="@id/tv_right" />
		</RelativeLayout>
	</RelativeLayout>

</LinearLayout>
