<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Remind"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="11dp" >

    <TextView
        android:id="@+id/remindinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:text="@string/remind_info"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorPrimaryDisableOnly" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/check_know"
            style="@style/setting_checkbox"
            android:layout_gravity="center_vertical"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/remind_check_note"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimaryDisableOnly" />
    </LinearLayout>

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/common_close" />

</LinearLayout>