<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/tv_title"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_title1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/tv_title"
            android:text="@string/regist_title2"
            android:textColor="#808080"
            android:textSize="13dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp" >

        <ImageView
            android:id="@+id/regist_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/regist_icon" />

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/regist_icon"
            android:stretchColumns="0" >

            <TableRow>

                <EditText
                    android:id="@+id/regist_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/common_email"
                    android:maxLength="22"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/line" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/line" >
                </LinearLayout>
            </TableRow>

            <TableRow android:layout_marginTop="20dp" >

                <EditText
                    android:id="@+id/regist_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/common_password"
                    android:maxLength="20"
                    android:password="true"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/line" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/line" >
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/layout_pet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tablelayout"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/regist_pet"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxLength="6"
                android:hint="@string/regist_pet"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_pet"
            android:layout_marginTop="3dp"
            android:background="@drawable/line" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_pet"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/regist_phonenum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/regist_phonenum"
                android:maxLength="11"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_phone"
            android:layout_marginTop="3dp"
            android:background="@drawable/line" >
        </LinearLayout>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/tablelayout"
            android:layout_marginTop="270dp"
            android:text="@string/regist_info_1"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_provision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/tablelayout"
            android:layout_below="@id/tv_confirm"
            android:layout_marginTop="15dp"
            android:text="@string/regist_info_2"
            android:textColor="#58c5c7"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" >

            <Button
                android:id="@+id/btn_cancel"
                style="@style/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_cancel_selector"
                android:text="@string/common_cancel" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_confirm_selector"
                android:text="@string/common_regist"
                android:textColor="#FFFFFF"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>