<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <FrameLayout
            android:id="@+id/btn_hold"
            style="@style/setting_layout"
            android:background="@drawable/layout_top_bg" >

            <TextView
                style="@style/setting_text"
                android:text="@string/setting_info_1" />

            <ImageView style="@style/setting_image" />
        </FrameLayout>

        <LinearLayout style="@style/setting_layout_line" />

        <FrameLayout
            android:id="@+id/btn_version"
            style="@style/setting_layout"
            android:background="@drawable/layout_bottom_bg" >

            <TextView
                style="@style/setting_text"
                android:text="@string/setting_info_2" />

            <ImageView style="@style/setting_image" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_exit_selector"
            android:text="@string/setting_quit"
            android:textColor="#FFFFFF"
            android:textSize="17dp" />
    </LinearLayout>

</LinearLayout>