<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/about_icon" />

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/part1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/part1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_exit_selector"
            android:text="@string/setting_version"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/part4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/setting_version_info_2"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/part4"
            android:layout_centerHorizontal="true"
            android:text="@string/setting_version_info_1"
            android:textSize="12dp" />
    </RelativeLayout>

</LinearLayout>