<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TabHost android:id="@android:id/tabhost" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:background="#FFFFFF">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical">
			<TabWidget android:id="@android:id/tabs"
				android:visibility="gone" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<FrameLayout android:id="@android:id/tabcontent"
				android:layout_weight="1" android:layout_width="fill_parent"
				android:layout_height="fill_parent" />
			<RadioGroup android:orientation="horizontal"
				android:background="#000000" android:id="@+id/tabgroup"
				android:layout_width="fill_parent" android:layout_height="wrap_content">
				<RadioButton android:layout_width="0dp" android:text="@string/tab_record"
					android:gravity="center" android:button="@null" android:checked="true"
					android:drawableTop="@drawable/tab_record_selector"
					android:textSize="12dp" android:background="@drawable/tab_bg_selector"
					android:id="@+id/tab_record" android:layout_height="wrap_content"
					android:layout_weight="1" android:paddingTop="5dp" />
				<RadioButton android:layout_width="0dp" android:text="@string/tab_family"
					android:gravity="center" android:button="@null" android:textColor="#666666"
					android:drawableTop="@drawable/tab_family_selector"
					android:textSize="12dp" android:background="@drawable/tab_bg_selector"
					android:id="@+id/tab_family" android:layout_height="wrap_content"
					android:layout_weight="1" android:paddingTop="5dp" />
				<RadioButton android:layout_width="0dp" android:text="@string/tab_setting"
					android:gravity="center" android:button="@null" android:textColor="#666666"
					android:drawableTop="@drawable/tab_setting_selector"
					android:textSize="12dp" android:background="@drawable/tab_bg_selector"
					android:id="@+id/tab_setting" android:layout_height="wrap_content"
					android:layout_weight="1" android:paddingTop="5dp" />
			</RadioGroup>
		</LinearLayout>
	</TabHost>

</LinearLayout>
